--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5) inset;
   animation: show 1s;
 
   .category {
@@ -26,7 +26,7 @@
     margin: 4px auto 0 auto;
     filter: blur(3px);
   }
-  
+
   .title {
     margin: 2.5% 0 0 0;
     padding: 0 5%;
@@ -35,7 +35,7 @@
     font-weight: normal;
     word-break: break-word;
   }
-  
+
   .content {
     position: relative;
     flex-grow: 1;
@@ -44,7 +44,8 @@
     overflow: auto;
     font-size: 16px;
 
-    &::-webkit-scrollbar-corner ,&::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-corner,
+    &::-webkit-scrollbar-thumb {
       visibility: hidden;
     }
 
@@ -55,7 +56,8 @@
     }
   }
 
-  .file, .download {
+  .file,
+  .download {
     z-index: 1;
     position: absolute;
     bottom: 6px;
@@ -73,11 +75,12 @@
     width: 13px;
   }
 
-  .date, .confirmMessage {
+  .date,
+  .confirmMessage {
     padding: 2.5px 0;
     text-align: center;
     font-size: 14px;
-    color: rgb(160, 160 ,160);
+    color: rgb(160, 160, 160);
   }
 
   .confirmMessage {
@@ -85,14 +88,18 @@
   }
 
   @keyframes show {
-    from { opacity: 0 }
-    to { opacity: 1 }
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
 
 .noteDark {
   color: white;
-  
+
   .fileDark {
     filter: invert(100%);
   }
@@ -120,7 +127,8 @@
       font-size: 22px;
     }
 
-    .date, .confirmMessage {
+    .date,
+    .confirmMessage {
       font-size: 12px;
     }
   }
@@ -134,7 +142,7 @@
         width: 4px;
         height: 4px;
       }
-  
+
       &::-webkit-scrollbar-thumb {
         border-radius: 8px;
         background: #999;
