--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-around;
   border-radius: 2px;
-  box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5) inset;
   animation: show 1s;
 
   .title {
@@ -31,7 +31,7 @@
     .divider {
       margin-top: 5%;
       height: 50px;
-      border: 0.5px solid rgb(128, 128, 128);      
+      border: 0.5px solid rgb(128, 128, 128);
     }
   }
 
@@ -39,7 +39,7 @@
     margin-bottom: 10%;
     text-align: center;
   }
-  
+
   input {
     display: block;
     margin: 1vh auto;
@@ -63,20 +63,24 @@
       background-color: rgb(192, 192, 192);
     }
   }
-  
+
   .greeting {
     text-align: center;
     font-size: 18px;
     font-weight: normal;
   }
-  
+
   .errorMessage {
     color: red;
   }
 
   @keyframes show {
-    from { opacity: 0 }
-    to { opacity: 1 }
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
 
