--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  box-shadow: 0 0 8px 0 rgba(0, 0 ,0 , 0.5) inset;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5) inset;
   animation: show 1s;
 
   .colorPicker {
@@ -15,8 +15,12 @@
     animation: show 0.5s;
 
     @keyframes show {
-      from {opacity: 0;}
-      to {opacity: 1;}
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
     }
   }
 
@@ -29,8 +33,12 @@
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
   }
-  
-  .category, .categoryBackground, .title, .content, .save {
+
+  .category,
+  .categoryBackground,
+  .title,
+  .content,
+  .save {
     display: block;
     width: 100%;
     border: none;
@@ -121,8 +129,12 @@
   }
 
   @keyframes show {
-    from { opacity: 0 }
-    to { opacity: 1 }
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
 
@@ -130,7 +142,7 @@
   color: white;
 
   .titleDark::placeholder {
-      color: rgb(200, 200, 200);
+    color: rgb(200, 200, 200);
   }
 }
 
@@ -149,14 +161,14 @@
 }
 
 /* Desktop Only */
-@media (pointer:fine) {
+@media (pointer: fine) {
   .note {
     .content {
       &::-webkit-scrollbar {
         width: 4px;
         height: 4px;
       }
-  
+
       &::-webkit-scrollbar-thumb {
         border-radius: 8px;
         background: #999;
