--- a/client/src/components/Notes/Notes.module.scss
+++ b/client/src/components/Notes/Notes.module.scss
@@ -1,80 +1,82 @@
 .filters {
-    margin: 2vh auto;
-    width: 25vw;
-    display: flex;
-    justify-content: center;
+  margin: 2vh auto;
+  width: 25vw;
+  display: flex;
+  justify-content: center;
 
-    .categoryFilter, .searchFilter {
-        border: 0.5px solid #ccc;
-        border-radius: 5px;
-        background-color: white;
+  .categoryFilter,
+  .searchFilter {
+    border: 0.5px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+  }
+
+  .categoryFilter {
+    width: 15%;
+    outline: none;
+
+    option {
+      background-color: transparent;
+    }
+  }
+
+  .searchFilter {
+    .searchIcon {
+      padding: 0.5rem;
     }
 
-    .categoryFilter {
-        width: 15%;
-        outline: none;
-        
-        option {
-            background-color: transparent;
-        }
+    .searchBox {
+      border: none;
+      background-color: transparent;
+      outline: none;
     }
-
-    .searchFilter {
-        .searchIcon {
-            padding: 0.5rem;
-        }
-
-        .searchBox {
-            border: none;
-            background-color: transparent;
-            outline: none;
-        }
-    }
+  }
 }
 
 .filtersDark {
+  color: white;
+
+  .categoryFilterDark,
+  .searchFilterDark {
     color: white;
+    background-color: #222;
+  }
 
-    .categoryFilterDark, .searchFilterDark {
-        color: white;
-        background-color: #222;
+  .searchFilterDark {
+    .searchBox {
+      color: white;
+
+      &::placeholder {
+        color: rgb(200, 200, 200);
+      }
     }
-
-    .searchFilterDark {
-        .searchBox {
-            color: white;
-
-            &::placeholder {
-                color: rgb(200, 200, 200);
-            }
-        }
-    }
+  }
 }
 
 .notesContainer {
-    margin: 0 auto;
-    width: 95%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+  margin: 0 auto;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
-    .filters {
-        width: 70vw;
-    }
+  .filters {
+    width: 70vw;
+  }
 }
 
 @media (max-width: 480px) {
-    .filters {
-        width: 90vw;
-    }
-    
-    .notesContainer {
-        width: 90%;
-        flex-direction: column;
-        justify-content: center;
-    }
+  .filters {
+    width: 90vw;
+  }
+
+  .notesContainer {
+    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
