--- a/client/src/components/Notes/Options.module.scss
+++ b/client/src/components/Notes/Options.module.scss
@@ -1,34 +1,43 @@
 .options {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 21.5px;
+  border-radius: 4px 4px 0 0;
+  background-color: transparent;
+  animation: show 0.5s;
+
+  @keyframes show {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .edit,
+  .delete,
+  .confirm,
+  .cancel {
     position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 21.5px;
-    border-radius: 4px 4px 0 0;
-    background-color: transparent;
-    animation: show 0.5s;
+    bottom: 6px;
+    height: 75%;
+    opacity: 0.5;
+    cursor: pointer;
 
-    @keyframes show {
-        from {opacity: 0;}
-        to {opacity: 1};
+    &:hover {
+      opacity: 1;
     }
+  }
 
-    .edit, .delete, .confirm, .cancel {
-        position: absolute;
-        bottom: 6px;
-        height: 75%;
-        opacity: 0.5;
-        cursor: pointer;
+  .edit,
+  .confirm {
+    left: 2.5%;
+  }
 
-        &:hover {
-            opacity: 1;
-        }
-    }
-
-    .edit, .confirm {
-        left: 2.5%;
-    }
-
-    .delete, .cancel {
-        left: 15%;
-    }
+  .delete,
+  .cancel {
+    left: 15%;
+  }
 }
