remove border and background of auth inputs

--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -44,13 +44,20 @@
     display: block;
     margin: 1vh auto;
     padding: 4px;
-    border: 1px solid rgb(200, 200, 200);
-    border-radius: 4px;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    font-size: 16px;
+
+    &:-webkit-autofill {
+      -webkit-box-shadow: 0 0 0 100px white inset;
+    }
   }
 
   .login_register {
     margin-top: 10%;
     padding: 6px;
+    border: 1px solid gray;
     border-width: 1px;
     border-radius: 4px;
     background-color: transparent;
