add an example note (only shows when localStorage is empty)

--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -45,7 +45,7 @@
     margin: 1vh auto;
     padding: 4px;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid lightgray;
     outline: none;
     font-size: 16px;
 
