--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -28,7 +28,7 @@
   }
 
   .title {
-    margin: 2.5% auto;
+    margin: 10px auto;
     margin-bottom: 0;
     width: 94%;
     text-align: center;
@@ -41,7 +41,7 @@
   .content {
     position: relative;
     flex-grow: 1;
-    margin: 2.5% 4% 1% 4%;
+    margin: 10px 12px 2.5px 12px;
     white-space: pre;
     overflow: auto;
     font-size: 16px;
