--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -68,7 +68,8 @@
   }
 
   .title {
-    margin: 2.5% 0;
+    margin: 6px auto;
+    margin-bottom: 0;
     padding: 0 5%;
     box-sizing: border-box;
     font-size: 26px;
@@ -76,7 +77,7 @@
 
   .content {
     width: 90%;
-    margin: 2% 4% 1% 4%;
+    margin: 4px 12px 2.5px 12px;
     padding-bottom: 12.5vh;
     resize: none;
     white-space: pre;
