Redesign and add background image In addition, enforce uppercase categories once more

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,9 @@ html {
 
 body {
   margin: 0;
+  background-image: url(./assets/images/background-light.jpg);
+  background-size: cover;
+  background-attachment: fixed;
   color: rgb(80, 80, 80);
   animation: showApp 1s;
 
@@ -17,17 +20,11 @@ body {
   }
 }
 
+.dark {
+  background-image: url(./assets//images/background-dark.jpg);
+}
+
 img {
   user-select: none;
   -webkit-tap-highlight-color: transparent;
-}
-
-@media (pointer: none), (pointer: coarse) {
-  img:not([title='Theme']) {
-    opacity: 1 !important;
-
-    &:hover {
-      opacity: 1 !important;
-    }
-  }
 }
