--- a/client/src/components/Notes/NewNote.module.scss
+++ b/client/src/components/Notes/NewNote.module.scss
@@ -4,6 +4,7 @@
   width: 20%;
   display: flex;
   flex-direction: column;
+  background-color: rgba(white, 0.5);
   border-radius: 4px;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5) inset;
   animation: show 1s;
@@ -141,6 +142,7 @@
 
 .noteDark {
   color: white;
+  background-color: rgba(black, 0.5);
 
   .titleDark::placeholder {
     color: rgb(200, 200, 200);
