--- a/client/src/components/Notes/Notes.module.scss
+++ b/client/src/components/Notes/Notes.module.scss
@@ -8,7 +8,7 @@
   .searchFilter {
     border: 0.5px solid #ccc;
     border-radius: 5px;
-    background-color: #aeeefa;
+    background-color: white;
   }
 
   .categoryFilter {
@@ -39,7 +39,7 @@
   .categoryFilterDark,
   .searchFilterDark {
     color: white;
-    background-color: #090a1f;
+    background-color: #222;
   }
 
   .searchFilterDark {
