--- a/client/src/components/Navigation/NavigationBar.module.scss
+++ b/client/src/components/Navigation/NavigationBar.module.scss
@@ -30,18 +30,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-size: 34px;
-    color: transparent;
-    background-color: black;
-    text-shadow: 0 0 2px white;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
   }
 
   .auth {
     font-size: 24px;
     text-decoration: none;
-    color: inherit;
 
     .user {
       width: 24px;
@@ -57,21 +50,9 @@
   }
 }
 
-.navBarDark {
-  .themeDark {
-    filter: invert(100%);
-  }
-
-  .notesDark {
-    background-color: white;
-    text-shadow: 0 0 2px #404040;
-  }
-
-  .authDark {
-    .userDark {
-      filter: invert(100%);
-    }
-  }
+.themeDark,
+.userDark {
+  filter: invert(100%);
 }
 
 @media (max-width: 480px) {
