--- a/client/src/components/Notes/Notes.module.scss
+++ b/client/src/components/Notes/Notes.module.scss
@@ -33,23 +33,15 @@
   }
 }
 
-.filtersDark {
-  color: white;
+.categoryFilterDark,
+.searchFilterDark {
+  color: inherit;
+  background-color: #222 !important;
+}
 
-  .categoryFilterDark,
-  .searchFilterDark {
-    color: white;
-    background-color: #222;
-  }
-
-  .searchFilterDark {
-    .searchBox {
-      color: white;
-
-      &::placeholder {
-        color: rgb(200, 200, 200);
-      }
-    }
+.searchFilterDark {
+  .searchBox::placeholder {
+    color: rgb(200, 200, 200);
   }
 }
 
