--- a/src/components/NewNote/NewNote.module.scss
+++ b/src/components/NewNote/NewNote.module.scss
@@ -1,7 +1,7 @@
 .note {
   position: relative;
   margin: 1vw 0;
-  width: 20%;
+  width: 300px;
   display: flex;
   flex-direction: column;
   border-radius: 4px;
@@ -148,17 +148,11 @@
   color: rgb(200, 200, 200);
 }
 
-@media (max-width: 768px) {
-  .note {
-    margin: 4vw;
-    width: 40%;
-  }
-}
-
 @media (max-width: 480px) {
   .note {
     margin: 2vh 0;
     width: 100%;
+    height: 200px;
   }
 }
 
