--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-around;
   border-radius: 2px;
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5) inset;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   animation: show 0.5s;
 
   .userLogo {
