--- a/src/components/Notes/Note/Note.module.scss
+++ b/src/components/Notes/Note/Note.module.scss
@@ -16,20 +16,20 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
 
-  .category {
-    position: absolute;
-    top: 4px;
-    width: 100%;
-    text-align: center;
-    font-size: 12px;
-    letter-spacing: 3px;
-    color: white;
+  .categoryBackground {
+    padding: 2px 0;
+    background-color: #ffffde;
+    border-radius: 4px 4px 0 0;
   }
 
-  .categoryBackground {
-    width: 99%;
-    margin: 3px auto 0 auto;
-    filter: blur(3px);
+  .category {
+    position: absolute;
+    top: 3px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 3px;
+    font-size: 12px;
+    color: rgb(150, 150, 150);
   }
 
   .title {
@@ -63,25 +63,6 @@
     }
   }
 
-  .file,
-  .download {
-    z-index: 1;
-    position: absolute;
-    bottom: 6px;
-    right: 6px;
-    width: 16px;
-    opacity: 0.5;
-    cursor: pointer;
-
-    &:hover {
-      opacity: 1;
-    }
-  }
-
-  .file {
-    width: 13px;
-  }
-
   .date,
   .confirmMessage {
     padding: 2.5px 0;
@@ -102,10 +83,6 @@
       opacity: 1;
     }
   }
-}
-
-.fileDark {
-  filter: invert(100%);
 }
 
 @media (max-width: 480px) {
