--- a/src/components/Notes/Notes.module.scss
+++ b/src/components/Notes/Notes.module.scss
@@ -1,5 +1,5 @@
 .filters {
-  margin: 2vh auto;
+  margin: 20px auto;
   width: 25vw;
   display: flex;
   justify-content: center;
@@ -68,7 +68,5 @@
 
   .notesContainer {
     width: 90%;
-    flex-direction: column;
-    justify-content: center;
   }
 }
