--- a/src/components/Notes/NewNote/NewNote.module.scss
+++ b/src/components/Notes/NewNote/NewNote.module.scss
@@ -1,6 +1,6 @@
 .note {
   position: relative;
-  margin: 1vw 0;
+  margin: 15px;
   width: 300px;
   display: flex;
   flex-direction: column;
@@ -76,10 +76,10 @@
   }
 
   .save {
-    margin: 0 auto;
-    width: 25%;
-    min-height: 2vh;
-    border-radius: 8px 8px 0 0;
+    position: absolute;
+    bottom: 0;
+    width: 100;
+    border-radius: 0 0 4px 4px;
     color: white;
     font-size: 14px;
     background-color: green;
@@ -121,9 +121,9 @@
 
 @media (max-width: 480px) {
   .note {
-    margin: 2vh 0;
     width: 100%;
     height: 200px;
+    margin: 10px 0;
   }
 }
 
