--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -1,7 +1,7 @@
 .navBar {
   display: flex;
-  margin: 1.5vh auto;
-  margin-bottom: 5vh;
+  margin: 10px auto;
+  margin-bottom: 40px;
   padding: 0 10px;
   width: 99%;
   box-sizing: border-box;
@@ -35,7 +35,7 @@
 
   .auth {
     float: right;
-    margin-left: 10px;
+    margin-left: 15px;
     font-size: 22px;
     text-decoration: none;
 
