--- a/src/components/Files/File/File.module.scss
+++ b/src/components/Files/File/File.module.scss
@@ -1,12 +1,15 @@
 .file {
   display: flex;
   justify-content: space-between;
-  position: relative;
+  align-items: center;
   width: 500px;
   height: 26px;
-  padding-right: 7.5px;
+  margin: 20px;
   border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  font-family: inherit;
+  background-color: inherit;
+  color: inherit;
   transition: 0.2s;
   animation: show 0.5s;
 
@@ -14,71 +17,36 @@
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
   }
 
-  .categoryWrap {
-    position: relative;
-    flex-basis: 30%;
-
-    .category,
-    .categoryBackground {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      float: left;
-      border: none;
-      outline: none;
-      font-family: inherit;
-      background-color: inherit;
-      text-align: center;
-      color: inherit;
-    }
-
-    .categoryBackground {
-      border-radius: 4px 0 0 4px;
-      background-color: #ffffde;
-    }
-
-    .category {
-      margin-top: 5px;
-      font-size: 12px;
-      letter-spacing: 3px;
-      color: rgb(150, 150, 150);
-    }
-  }
-
-  .name,
-  .extension {
-    height: 100%;
-    border: none;
-    outline: none;
-    font-family: inherit;
-    background-color: inherit;
+  .category {
+    min-width: 20%;
+    padding: 5px 0;
     text-align: center;
-    color: inherit;
+    font-size: 12px;
+    letter-spacing: 3px;
+    color: rgb(150, 150, 150);
+    background-color: #ffffde;
   }
 
   .name {
-    flex-basis: 50%;
-    margin: 0;
+    max-width: 100%;
+    margin: 0 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 18px;
+    font-weight: normal;
   }
 
-  .date {
-    margin-top: 5px;
-  }
-
-  .extension,
-  .download {
-    margin: 0 2.5px;
+  .infoWrap {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 30%;
+    height: 100%;
   }
 
   .download {
     width: 15px;
-    margin-top: 5px;
-    margin-bottom: 5px;
     opacity: 0.5;
     cursor: pointer;
 
@@ -97,27 +65,22 @@
   }
 }
 
-.uploading {
-  opacity: 0.5;
-  cursor: wait;
-
-  .category,
-  .categoryBackground,
-  .name,
-  .upload {
-    cursor: wait;
-    pointer-events: none;
-  }
-}
-
 .nameDark::placeholder {
   color: rgb(200, 200, 200);
 }
 
 @media (max-width: 480px) {
   .file {
-    margin: 2vh 0;
     width: 100%;
-    height: 200px;
+    margin: 10px 0;
+
+    .name {
+      max-width: 50%;
+    }
+
+    .infoWrap {
+      width: 35%;
+      font-size: 12px;
+    }
   }
 }
