--- a/src/components/Files/NewFile/NewFile.module.scss
+++ b/src/components/Files/NewFile/NewFile.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 500px;
-  height: 26px;
+  height: 34px;
   margin: 20px;
   border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -26,7 +26,7 @@
 
   .category {
     width: 25%;
-    padding: 5px 0;
+    padding: 9px 5px;
     text-align: center;
     border-radius: 4px 0 0 4px;
     font-size: 12px;
@@ -40,6 +40,8 @@
   }
 
   .name {
+    width: 50%;
+    margin: 0 10px;
     padding: 0;
     font-size: 18px;
   }
@@ -115,18 +117,14 @@
   .file {
     width: 100%;
     margin: 10px 0;
-  }
 
-  .name {
-    max-width: 50%;
-  }
+    .infoWrap {
+      width: 25%;
+      font-size: 12px;
 
-  .infoWrap {
-    width: 35%;
-    font-size: 12px;
-
-    .upload {
-      font-size: 10px;
+      .upload {
+        font-size: 10px;
+      }
     }
   }
 }
